<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:id="@+id/ll_deletar_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/img_content_description"
            app:srcCompat="@drawable/ic_delete_red" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_item_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="16dp"
            app:cardElevation="2dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_item_delete_post_tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:drawableStart="@drawable/ic_title_primary"
                    android:drawablePadding="5sp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/post_titulo"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_item_delete_post_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:drawableStart="@drawable/ic_data_primary"
                    android:drawablePadding="5sp"
                    android:text="@string/post_data"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_item_delete_post_texto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:maxLength="119"
                    android:maxLines="5"
                    android:justificationMode="inter_word"
                    android:text="@string/post_text"
                    android:textAlignment="viewStart" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</layout>