<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="br.com.renancsdev.dtiblog.ui.listar.activity.ListarDetalheViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.listar.activity.ListarDetalheActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_title_listar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/tv_titulo_detalhe"
                android:textColor="@color/title"
                android:textSize="34sp"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="100"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        android:text="@string/tv_titulo"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_item_post_tittle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/post_titulo"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/tv_data"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="@+id/tv_item_post_tittle"
                        app:layout_constraintTop_toBottomOf="@+id/tv_item_post_tittle" />

                    <TextView
                        android:id="@+id/tv_item_post_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:drawablePadding="5sp"
                        android:text="@string/post_data"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/tv_descricao"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="@+id/tv_item_post_data"
                        app:layout_constraintTop_toBottomOf="@+id/tv_item_post_data" />

                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fillViewport="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_item_post_texto"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="16dp"
                                android:ellipsize="end"
                                android:text="@string/post_detalhe_text"
                                android:textAlignment="viewStart"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </androidx.core.widget.NestedScrollView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_frag_voltar_post"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/title"
                    android:drawablePadding="4dp"
                    android:text="@string/button_voltar"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:cornerRadius="16dp"
                    app:icon="@drawable/ic_home_black_24dp"
                    app:iconGravity="textStart"
                    app:iconTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_send_email" />

                <Button
                    android:id="@+id/btn_frag_deletar_post"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:drawablePadding="4dp"
                    android:text="@string/button_deletar_post"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:cornerRadius="16dp"
                    app:icon="@drawable/ic_delete_white"
                    app:iconGravity="textStart"
                    app:iconTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_send_email" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>