<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/img_content_description"
                    app:layout_constraintEnd_toStartOf="@+id/tv_msg_delete"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_delete_data_red" />

                <TextView
                    android:id="@+id/tv_msg_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="44dp"
                    android:text="@string/textview_dialog_msg_excluir"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <Button
                        android:id="@+id/btn_msg_delete_cancel"
                        style="?android:attr/buttonBarButtonStyle"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/red"
                        android:text="@string/btn_cancelar" />

                    <Button
                        android:id="@+id/btn_msg_delete_ok"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        style="?android:attr/buttonBarButtonStyle"
                        android:textColor="@color/white"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/green"
                        android:text="@string/btn_excluir" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>