<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="br.com.renancsdev.dtiblog.ui.criar.CriarViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.criar.CriarFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="58dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_title_listar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/tv_titulo_criar_post"
                android:textColor="@color/title"
                android:textSize="34sp"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="100"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edit_text_titulo"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:layout_margin="8dp"
                        android:background="@drawable/textfield_round_black"
                        android:ems="10"
                        android:gravity="center"
                        android:autofillHints="text"
                        android:hint="@string/criar_post_hint_titulo"
                        android:inputType="text"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/edit_text_post"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/textfield_round_black"
                        android:ems="10"
                        android:gravity="top"
                        android:hint="@string/criar_post_hint_texto"
                        android:inputType="text"
                        android:autofillHints="text"
                        android:justificationMode="inter_word"
                        android:textSize="20sp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/btn_frag_adcionar_post"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/title"
                android:drawablePadding="4dp"
                android:text="@string/button_criar_post"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="16dp"
                app:icon="@drawable/ic_delete_white"
                app:iconGravity="textStart"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_send_email" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>